[workspace]
members = ["modules/*"]

[package]
name = "macroific"
version = "1.3.1"
edition = "2021"
rust-version = "1.71.0"
authors = [
  "Art <amolc@pm.me>",
]
license = "Apache-2.0"
readme = "README.md"
description = "Proc macro development utilities"
repository = "https://github.com/Alorel/macroific-rs"
keywords = [
  "macro",
  "development",
  "derive",
  "options",
  "parsing",
]
categories = [
  "development-tools::procedural-macro-helpers",
  "development-tools",
]
include = [
  "src/",
  "Cargo.toml",
]

[features]
attr_parse = [
  "macroific_macro/attr_parse",
  "dep:macroific_attr_parse",
  "dep:macroific_macro",
]
attributed = ["macroific_core/attributed"]
full = ["macroific_attr_parse/full"]
generic-impl = ["macroific_core/generic-impl"]
module-prefix = ["macroific_core/module-prefix"]

[dependencies]
macroific_macro = {version = "1.1", optional = true, path = "modules/macroific-macro"}
macroific_attr_parse = {version = "1.3.0", optional = true, path = "modules/macroific-attr-parse"}
macroific_core = {version = "1.0.1", path = "modules/macroific-core"}

[dev-dependencies]
quote = {workspace = true}
proc-macro2 = {workspace = true}
syn = {workspace = true, features = ["extra-traits"]}

[workspace.dependencies]
sealed = "0.5"
proc-macro2 = "1"
quote = "1"
syn = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "doc_cfg",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
